# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: .env.example  app.py  models.py  parser.py  url_normalyz.py  validators.py
page_analyzer/templates/: index.html  layout.html  urls_index.html  urls_show.html
