[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    {name = "BlackJackSPB",email = "Rystzov1995@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "gunicorn",
    "python-dotenv",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
